# qshr

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
examples/: async_pipeline.rs  async_run.rs  async_watch.rs  async_watch_stream.rs  chunk_map_parallel.rs  find_large.rs  glob_walk.rs  macro.rs  macro_watch.rs  macro_workflow.rs  pipeline_stream.rs  script.rs  watch.rs  watch_build.rs  watch_debounce.rs  watch_glob.rs  watch_trigger.rs
scripts/: publish.sh
src/: command.rs  env.rs  error.rs  fs.rs  lib.rs  macros.rs  main.rs  prelude.rs  shell.rs
src/command/: builder.rs  pipeline.rs  receiver.rs  stdin.rs  tests.rs
src/fs/: entries.rs  filter.rs  glob.rs  io.rs  tests.rs  walk.rs  watch.rs
src/shell/: base.rs  iters.rs  tests.rs
tests/: command_pipeline.rs  env_shell.rs  filesystem.rs  integration.rs  macro_scripts.rs  watchers.rs
