[package]
name = "crab-shell"
version = "0.1.0"
edition = "2024"

[features]
parallel = ["rayon"]
async = ["tokio", "tokio-stream"]

[dependencies]
glob = "0.3"
rayon = { version = "1", optional = true }
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread", "io-util"], optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
