[package]
name = "qshr"
version = "0.3.0"
edition = "2024"
description = "Turtle-inspired shell scripting helpers for Rust"
license = "MIT"
repository = "https://github.com/sharno/qshr"
readme = "README.md"
keywords = ["shell", "command", "pipeline", "watch", "turtle"]
categories = ["command-line-utilities"]
exclude = ["turtle/**"]

[features]
parallel = ["rayon"]
async = ["tokio", "tokio-stream"]

[dependencies]
glob = "0.3"
notify = "8.2.0"
rayon = { version = "1", optional = true }
tokio = { version = "1", features = [
    "process",
    "macros",
    "rt-multi-thread",
    "io-util",
], optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
